gen/speech/v1p1beta1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-speech1_p1beta1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/speech/v1p1beta1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/speech/v1p1beta1/lib/src/lib.rs:1362:13
     |
1362 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/speech/v1p1beta1/lib/src/lib.rs:1374:17
     |
1374 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-speech1_p1beta1`.

To learn more, run the command again with --verbose.
